# palkkatietopalvelu

./: .gitignore  README.md  codecov.yml  docker-compose.yaml  package-lock.json  run_robot_tests.sh
backend/: .coverage  .coveragerc  .pylintrc  Dockerfile  README.md  app.py  package-lock.json  pyproject.toml  run_robot_tests.sh  tasks.py
backend/file_storage/: .gitignore  template.csv
backend/src/: .coverage  .coveragerc  AccountLibrary.py  AppLibrary.py  app.py  applibrary.py  check_env.py  config.py  daily_scheduler.py  db.py  initialize_db.py  mail_scheduler.py  mail_service.py  schema.sql  trash_scheduler.py
backend/src/controllers/: clients.py  files.py  login.py  mail.py  manual_reminders.py  pdfs.py  reminders.py  sms.py  users.py
backend/src/migrations/: env.py
backend/src/models/: user.py
backend/src/sched_settings/: default.json  test_custom.json
backend/src/tests/: add_client.robot  add_client_test.py  client_data_change.robot  client_methods_test.py  client_user_test.py  clients_test.py  create.robot  deactivate_test.py  edit_client_test.py  file_methods_test.py  file_test.py  file_test.robot  filter_test.robot  login.robot  login_test.py  mail_scheduler_test.py  mail_test.py  password.robot  password_change_test.py  password_test.py  pdf_methods_test.py  pdf_test.robot  reminder_methods_test.py  resource.robot  sched_setting_methods_test.py  sms_test.py  token_methods_test.py  user_test.py
backend/src/utilities/: client_methods.py  client_user.py  file_methods.py  pdf_methods.py  reminder_methods.py  require_admin.py  require_login.py  (+5 more)
(+131 files in other folders)
