[tool.poetry]
name = "palkkatietopalvelu-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
invoke = "^2.2.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
pytest = "^8.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.9"
werkzeug = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
