[tool.poetry]
name = "palkkatietopalvelu-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
invoke = "^2.2.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.9"
werkzeug = "^3.0.1"
robotframework = "^7.0"
robotframework-seleniumlibrary = "^6.2.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
gunicorn = "^21.2.0"
flask-mail = "^0.9.1"
apscheduler = "^3.10.4"



[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^7.4.4"
pytest-dotenv = "^0.5.2"
coverage = "^7.4.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"